fixed some css. reduced text size on input box, aligned headers

--- a/client/src/Components/Credentials/inputField.css
+++ b/client/src/Components/Credentials/inputField.css
@@ -8,8 +8,8 @@
 
 .inputBox {
     width: 229.1px;
-    height: 38px;
-    font-size: 20px;
+    height: 30px;
+    font-size: 15px;
     border: .5px solid rgb(198, 196, 196);
     border-radius: 4px;
 }
@@ -32,7 +32,7 @@
 
 .signUpHeader1 {
     text-align: start;
-    padding-left: 10px ;
+    padding-left: 40px ;
     margin-bottom: 0px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 40px;
@@ -41,6 +41,6 @@
 
 .signUpHeader2 {
     text-align: justify;
-    padding-left: 10px;
+    padding-left: 40px;
     font-size: 15px;
 }
